--- a/package.json
+++ b/package.json
@@ -3,23 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "dev": "vue-cli-service serve"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "eslint": "^7.17.0",
     "eslint-plugin-vue": "^7.4.1",
+    "primeicons": "^4.1.0",
+    "primevue": "^3.2.2",
     "pug": "^3.0.0",
     "pug-plain-loader": "^1.1.0",
     "register-service-worker": "^1.7.1",
-    "vue": "^3.0.0",
+    "vue": "^3.0.5",
     "vue-cli-plugin-pug": "^2.0.0",
     "vue-router": "^4.0.0-0",
-    "vuetify": "^2.4.2",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
@@ -36,7 +37,7 @@
     "deepmerge": "^4.2.2",
     "node-sass": "^5.0.0",
     "sass": "^1.32.4",
-    "sass-loader": "^10.1.1",
+    "sass-loader": "10.1.1",
     "typescript": "~3.9.3",
     "vue-jest": "^5.0.0-0"
   }
