--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "dev": "vue-cli-service serve"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.168",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "eslint": "^7.17.0",
     "eslint-plugin-vue": "^7.4.1",
+    "lodash": "^4.17.20",
     "primeicons": "^4.1.0",
     "primevue": "^3.2.2",
     "pug": "^3.0.0",
