--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/lodash": "^4.14.168",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.4",
     "eslint": "^7.17.0",
     "eslint-plugin-vue": "^7.4.1",
     "lodash": "^4.17.20",
