--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue": "^3.0.5",
     "vue-cli-plugin-pug": "^2.0.0",
     "vue-router": "^4.0.0-0",
+    "vue3-loading-overlay": "0.0.0",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
