--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "dev": "vue-cli-service serve",
+    "dev:local": "vue-cli-service serve --mode localtest",
     "dev:https": "vue-cli-service serve --https"
   },
   "dependencies": {
@@ -18,6 +19,7 @@
     "eslint-plugin-vue": "^7.4.1",
     "instascan": "^1.0.0",
     "lodash": "^4.17.20",
+    "mitt": "^2.1.0",
     "primeicons": "^4.1.0",
     "primevue": "^3.2.2",
     "pug": "^3.0.0",
