--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "dev": "vue-cli-service serve",
+    "dev:prod": "vue-cli-service serve --mode production",
     "dev:local": "vue-cli-service serve --mode localtest",
     "dev:https": "vue-cli-service serve --https"
   },
@@ -27,8 +28,8 @@
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.5",
     "vue-cli-plugin-pug": "^2.0.0",
+    "vue-loading-overlay": "4.0",
     "vue-router": "^4.0.0-0",
-    "vue3-loading-overlay": "0.0.0",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
