--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev:https": "vue-cli-service serve --https"
   },
   "dependencies": {
+    "@googlemaps/markerclustererplus": "^1.1.0",
     "@types/lodash": "^4.14.168",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
