--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pug": "^3.0.0",
     "pug-plain-loader": "^1.1.0",
     "register-service-worker": "^1.7.1",
+    "swiper": "^6.5.9",
     "vue": "^3.0.5",
     "vue-cli-plugin-pug": "^2.0.0",
     "vue-loading-overlay": "4.0",
