Can add comment and reply

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VUE_APP_TOKEN_NAME=GO_COURT_TOKEN
 VUE_APP_API_PATH=https://tom-lee.site/api
+VUE_APP_COMMENT_API_PATH=https://tom-lee.site/comment-service
