--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@googlemaps/markerclustererplus": "^1.1.0",
     "@types/lodash": "^4.14.168",
     "axios": "^0.21.1",
+    "compressorjs": "^1.0.7",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.4",
     "eslint": "^7.17.0",
